# ontbo-context-api

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
lib/: ontbo.py  profile.py  scene.py
samples/upload_json_profile/: 01_create_profile.py  02_query_profile.py
src/ontbo/: __init__.py  exceptions.py  ontbo.py  profile.py  scene.py
tests/: .env.test.sample  conftest.py  test_ontbo.py  test_profile.py  test_scene.py  test_scene_message.py
