[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontbo-client"
version = "1.3.0"
description = "Python client for the Ontbo API. Go-to https://www.ontbo.com/."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Stéphane Aubry", email = "contact@ontbo.com" }]
dependencies = [
    "requests",
]

[tool.setuptools.packages.find]
where = ["ontbo"]